--- a/social-media.html
+++ b/social-media.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
      <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.1/css/lightgallery.css" rel='stylesheet'>
+ <link href='style.css' rel='stylesheet'>
+ <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.1/js/lightgallery.js"></script>
+ <script type="text/javascript">
+    $(document).ready(function() {
+        $("#lightgallery").lightGallery(); 
+    });
+</script>
 
   </head>
   <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
