--- a/social-media.html
+++ b/social-media.html
@@ -41,5 +41,11 @@ iframe {
   top: 256px;
   left: 779px;
 }
+
+#twitter-timeline {
+  position: absolute;
+  top: 256px;
+  left: 350px;
+}
 </style>
 </html>
