--- a/social-media.html
+++ b/social-media.html
@@ -43,12 +43,19 @@ iframe {
   left: 779px;
 }
 
-div, #twitter-timeline {
+div {
   position: absolute;
   top: 256px;
   left: 450px;
   width: 100%;
   height: 550px;
+}
+
+#twitter-timeline {
+  position: absolute;
+  top: 256px;
+  left: 450px;
+  width: 100%;
 }
 </style>
 </html>
