--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,10 @@
 <body>
   <div id="lightgallery">
   <a href="http://i.imgur.com/bEufb8C.gif">
-   <img src="http://i.imgur.com/bEufb8C.gif" title="Striped Pattern">
+   <div class="lg-sub-html">
+   <img src="http://i.imgur000.com/bEufb8C.gif" title="Striped Pattern">
+   <h3>Striped Pattern</h3>
+   </div>
   </a>
   <a href="http://i.imgur.com/JToaZUq.gif">
    <img src="http://i.imgur.com/JToaZUq.gif" title="Diamond Pattern">
