--- a/social-media.html
+++ b/social-media.html
@@ -57,5 +57,12 @@ div {
   left: 450px;
   width: 100%;
 }
+
+iframe, .twitter-timeline {
+  position: absolute;
+  top: 256px;
+  left: 350px;
+  width:100%;
+}
 </style>
 </html>
