--- a/social-media.html
+++ b/social-media.html
@@ -58,7 +58,7 @@ div {
   width: 100%;
 }
 
-iframe, .twitter-timeline {
+ .twitter-timeline {
   position: absolute;
   top: 256px;
   left: 350px;
