--- a/social-media.html
+++ b/social-media.html
@@ -58,7 +58,8 @@ div {
   width: 100%;
 }
 
- .twitter-timeline {
+ a.twitter-timeline {
+   display: inline-block;
   position: absolute;
   top: 256px;
   left: 350px;
