--- a/social-media.html
+++ b/social-media.html
@@ -34,7 +34,7 @@
   <a class="twitter-timeline" href="https://twitter.com/francis_mikeala" data-widget-id="645944023019089920">Tweets by @francis_mikeala</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-
+<iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-timeline twitter-timeline-rendered" allowfullscreen="true" style=" visibility: visible; display: inline-block; width: 100%; height: 540px; padding: 0px; border: none; max-width: 520px; min-width: 180px; min-height: 200px; margin-top: 0px; margin-bottom: 0px;" data-widget-id="645944023019089920" data-user-id="3291142070" title="Twitter Timeline"></iframe>
 </body>
 <style>
 iframe {
@@ -51,14 +51,14 @@ div {
   height: 550px;
 }
 
-#twitter-timeline {
+.twitter-timeline {
   position: absolute;
   top: 256px;
   left: 450px;
   width: 100%;
 }
 
- a,#twitter-timeline {
+ a.twitter-timeline {
    display: inline-block;
   position: absolute;
   top: 256px;
