--- a/social-media.html
+++ b/social-media.html
@@ -49,19 +49,12 @@ div {
   height: 550px;
 }
 
-.twitter-timeline {
-  position: absolute;
+#twitter-timeline {
+  display: inline-block;
   top: 256px;
   left: 450px;
   width: 100%;
 }
 
- a.twitter-timeline {
-   display: inline-block;
-  position: absolute;
-  top: 256px;
-  left: 350px;
-  width:100%;
-}
 </style>
 </html>
