--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <a href="gallery.html">See my Work</a>
        </section>
        
-<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" frameborder="0" allowfullscreen autoplay loop muted></iframe>
+<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" frameborder="0" allowfullscreen autoplay  muted></iframe>
       
 </body>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
