--- a/pricing.html
+++ b/pricing.html
@@ -116,14 +116,12 @@
   text-decoration: none;
 }
   </style>
-</head>
 <body>
-
-<table border="5" cellpadding="4" cellspacing="2">
-<tr>
-  <th><i class="fa fa-check-circle-o"></i></th>
-  <th><i class="fa fa-check"></i></th>
-  <th><i class="fa fa-check-circle"></i></th>
+ <table>
+  <tr>
+    <th><i class="fa fa-check-circle-o"></i></th>
+    <th><i class="fa fa-check"></i></th>
+    <th><i class="fa fa-check-circle"></i></th>
   </tr>
   <tr>
   <th>Graphic Design Package</th>
@@ -176,10 +174,11 @@ contains logo designs and poster designs.
     $300
   </td>
 </tr>
-<tr colspan="3" align="center">
+<tr>
   <td></td>
   <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td></td>
 </tr>
 </table>
 </body>
+</html>
