--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <h1>Gallery</h1><nav>
-<a href="index.html"><i class="fa fa-home"></i></a></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
+<a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
  </nav>
  <strong>
   <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
@@ -28,13 +28,13 @@
 <body>
   <div id="lightgallery">
   <a href="http://i.imgur.com/JToaZUq.gif">
-   <img src="http://i.imgur.com/JToaZUq.gif" title="Diamond Pattern">
+   <img src="http://i.imgur.com/JToaZUq.gif" alt= "textile" title="Diamond Pattern">
   </a>
   <a href="http://i.imgur.com/8xorC2w.gif">
-   <img src="http://i.imgur.com/8xorC2w.gif" title="Flowers">
+   <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers">
   </a>
   <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif" title="The Royal Show">
+   <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show">
   </a>
   ...
 </div>
