--- a/gallery.html
+++ b/gallery.html
@@ -39,14 +39,5 @@
   ...
 </div>
 </body>
-<style>
-  #lightgallery {
-      position: fixed;
-      top: 217px;
-      left: 124px;
-      text-align: center;
-      width: 90%;
-      height: 40px;
-    }
-</style>
+<footer>Created by Mikeala FRancis &copy;2015</footer>
 </html>
