--- a/social-media.html
+++ b/social-media.html
@@ -20,7 +20,7 @@
   <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
   <h2>A girl who simply enjoys the creative things in life.</h2>
   <h1>Social Media Feed</h1><nav>
-     <a href="index.html"><i class="fa fa-home"></i></a></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
+     <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
      </nav>  
        <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
@@ -29,32 +29,8 @@
 
 <body>
  <iframe src="http://snapwidget.com/bd/?u=ZnJhbmNpc21pa2VhbGF8aW58MjAwfDN8M3x8bm98MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=160915" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:660px; height:1035px"></iframe>
-
-
+ 
   <a class="twitter-timeline" href="https://twitter.com/francis_mikeala" data-widget-id="645944023019089920">Tweets by @francis_mikeala</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </body>
-<style>
-iframe {
-  position: fixed;
-  top: 256px;
-  left: 921px;
-}
-
-div {
-  position: absolute;
-  top: 256px;
-  left: 450px;
-  width: 100%;
-  height: 550px;
-}
-
-#twitter-timeline {
-  display: inline-block;
-  top: 256px;
-  left: 450px;
-  width: 100%;
-}
-
-</style>
 </html>
