--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <a href="gallery.html">See my Work</a>
        </section>
        
-<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" frameborder="0" allowfullscreen></iframe>
+<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" border="0" allowfullscreen></iframe>
 
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </body>
