--- a/about.html
+++ b/about.html
@@ -19,9 +19,11 @@
   </strong>
 </header>
 <body>
- <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
+<section id="image">
+ <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
+</section>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </body>
 </html>
