--- a/about.html
+++ b/about.html
@@ -21,9 +21,14 @@
 <body>
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
-<section id="image">
  <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
-</section>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </body>
+<style>
+ img {
+  positon: fixed;
+  top: 256px;
+  left: 921px;
+ }
+</style>
 </html>
