--- a/social-media.html
+++ b/social-media.html
@@ -33,4 +33,12 @@
   <a class="twitter-timeline" href="https://twitter.com/francis_mikeala" data-widget-id="645944023019089920">Tweets by @francis_mikeala</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </body>
+
+<style>
+  iframe {
+    position: fixed;
+    top: 256px;
+    left: 921px;
+  }
+</style>
 </html>
