--- a/social-media.html
+++ b/social-media.html
@@ -44,5 +44,11 @@ body {
     top: 256px;
     left: 921px;
   }
+  
+  #twitter-timeline {
+  position: fixed;
+  top: 258px;
+  left: 450px;
+}
 </style>
 </html>
