--- a/final.html
+++ b/final.html
@@ -1,1 +1,37 @@
-
+<!doctype html>
+<html>
+  <head>
+   <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet"> 
+  </head>
+  
+<body>
+   <div class="nav">
+      <div class="container">
+        <ul class="pull-left">
+          <li><a href="#">Link 1</a></li> 
+          <li><a href="#">Link 2</a></li>
+        </ul>
+        <ul class="pull-right">
+          <li><a href="#">Link A</a></li>
+          <li><a href="#">Link B</a></li>
+          <li><a href="#">Link C</a></li>
+        </ul>
+  
+  
+  
+  
+  
+</body>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+</html>
