--- a/final.html
+++ b/final.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet"> 
-  <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+  <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   <link rel="stylesheet" href="final.css">
   </head>
   
@@ -58,22 +58,26 @@
   </div>
 
 </div>
-
-  
-  
-  
-  
+<div class="learn-more">
+	<div class="container">
+		<div class="row">
+	  	<div class="col-md-4">
+        <h3>Header 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna.</p>
+        <p><a href="#">Learn More 1</a></p>
+      </div>
+       <div class="col-md-4">
+			<h3>Header 2</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna</p>
+			<p><a href="#">Learn More 2</a></p>
+	      </div>
+		  <div class="col-md-4">
+			<h3>Header 3</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna.</p>
+			<p><a href="#">Learn More 3</a></p>
+		  </div>
+	    </div>
+	  </div>
+	</div>
 </body>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
 </html>
