--- a/final.html
+++ b/final.html
@@ -46,7 +46,7 @@
       <img src="http://goo.gl/vw43v1">
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4.col-md-offset-4.">
     <div class="thumbnail">
       <img src="http://goo.gl/0Kd7UO" >
     </div>
