--- a/final.html
+++ b/final.html
@@ -32,19 +32,10 @@
     <div class="header-1">
       <div class="container">
         <h2>Header 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-        Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
-        felis at, euismod nibh. Fusce ullamcorper, enim et <br>
-        congue dapibus, turpis lectus pulvinar risus, at porttitor <br>
-        ex turpis at dui. Mauris nunc ligula, luctus vel metus <br>
-        egestas, rutrum semper arcu. In sed nisi ornare, <br>
-        vulputate enim quis, ornare sem. Vivamus non vehicula <br>
-        dui. Interdum et malesuada fames ac ante ipsum primis <br>
-        in faucibus. Proin molestie mollis tortor sed rutrum. <br>
-        Vivamus a nulla placerat, luctus ligula at, ornare lorem. <br>
-        Mauris molestie nisl non porttitor viverra. Nunc <br>
-        scelerisque odio non sollicitudin auctor. Fusce sodales et <br>
-        enim eu euismod. Donec id eros urna.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue <br>
+        dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare <br>
+        sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula <br>
+        at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna.</p>
       <div class="row">
       <div class="col-md-4">
       <div class="thumbnail"> 
@@ -69,7 +60,19 @@
    <div class="container">
 	 <div class="col-md-4">
         <h3>Header 1</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a fermentum erat. Duis in est rutrum, ullamcorper felis at, euismod nibh. Fusce ullamcorper, enim et congue dapibus, turpis lectus pulvinar risus, at porttitor ex turpis at dui. Mauris nunc ligula, luctus vel metus egestas, rutrum semper arcu. In sed nisi ornare, vulputate enim quis, ornare sem. Vivamus non vehicula dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin molestie mollis tortor sed rutrum. Vivamus a nulla placerat, luctus ligula at, ornare lorem. Mauris molestie nisl non porttitor viverra. Nunc scelerisque odio non sollicitudin auctor. Fusce sodales et enim eu euismod. Donec id eros urna.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+        Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
+        felis at, euismod nibh. Fusce ullamcorper, enim et <br>
+        congue dapibus, turpis lectus pulvinar risus, at porttitor <br>
+        ex turpis at dui. Mauris nunc ligula, luctus vel metus <br>
+        egestas, rutrum semper arcu. In sed nisi ornare, <br>
+        vulputate enim quis, ornare sem. Vivamus non vehicula <br>
+        dui. Interdum et malesuada fames ac ante ipsum primis <br>
+        in faucibus. Proin molestie mollis tortor sed rutrum. <br>
+        Vivamus a nulla placerat, luctus ligula at, ornare lorem. <br>
+        Mauris molestie nisl non porttitor viverra. Nunc <br>
+        scelerisque odio non sollicitudin auctor. Fusce sodales et <br>
+        enim eu euismod. Donec id eros urna.</p>
         <p><a href="#">Learn More 1</a></p>
       </div>
 </body>
