--- a/final.html
+++ b/final.html
@@ -58,6 +58,7 @@
 </div>
 <div class="learn-more">
    <div class="container">
+   	<div class="row">
 	 <div class="col-md-4">
         <h3>Header 1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
@@ -75,6 +76,7 @@
         enim eu euismod. Donec id eros urna.</p>
         <p><a href="#">Learn More 1</a></p>
       </div>
+      <div class="col-md-4">
     <h3>Header 2</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
     Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
@@ -90,6 +92,10 @@
     scelerisque odio non sollicitudin auctor. Fusce sodales et <br>
     enim eu euismod. Donec id eros urna.</p>
     <p><a href="#">Learn More 2</a></p>
+    </div>
+   </div>
+   
+    <div class="col-md-4">
    <h3>Header 3</h3>	
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
    Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
