--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
      </nav>  
        <strong>
-        <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
        </strong>
 </header>
 <body>
@@ -42,7 +42,7 @@
   <section id="work">
     <a href="gallery.html">See my Work</a>
   </section>
-<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" frameborder="0" allowfullscreen></iframe>
+<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" allowfullscreen></iframe>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </body>
 </html>
