--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
   </strong>
   <section id="work">
+    <h3>See my Work</h3>
     <a href="gallery.html">See my Work</a>
   </section>
 <iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" allowfullscreen></iframe>
