--- a/about.html
+++ b/about.html
@@ -7,6 +7,13 @@
   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
+ <style>
+   img {
+  positon: fixed;
+  top: 256px;
+  left: 921px;
+ }
+ </style>
 </head>
 <header>
   <img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
