--- a/pricing.html
+++ b/pricing.html
@@ -5,84 +5,7 @@
    <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
    <link href='style.css' rel='stylesheet'>
-   </head>
-   <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
-<h2>A girl who simply enjoys the creative things in life.</h2>
-<h1>Pricing</h1><nav>
-<a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
- </nav>
- <strong>
-  <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
-  </strong>
-</header>
-  
-<body>
- <table>
-  <tr>
-    <th><i class="fa fa-check-circle-o"></i></th>
-    <th><i class="fa fa-check"></i></th>
-    <th><i class="fa fa-check-circle"></i></th>
-  </tr>
-  <tr>
-  <th>Graphic Design Package</th>
-  <th>Web Design Package</th>
-  <th>Print Package</th>
-</tr>
-<tr>
-  <td>This is the Graphic Design package;
-contains logo designs and poster designs.
-  </td>
-  <td>This is the Web Design package;
-  contains 1 website with unlimited pages and HTML/CSS coding tutorials.
- </td>
- <td>This is the Print package;
- contains business cards, letterheads, and brochure designs .
- </td>
-</tr>
-<tr>
-  <td>
-   <ul>
-  <li>A custom logo Design</li>
-   <li>Posters</li>
-   <li>Photoshop/Illustrator Tutorials</li>
-   <li>Fonts</li>
-   </ul> 
-  </td>
-  <td>
-     <ul>
-     <li>A .com domain</li>
-     <li>2 custom logo Designs</li>
-     <li>HTML/CSS Website Code</li>
-   </ul>
-  </td>
-  <td>
-       <ul>
-     <li>3-D printing</li>
-     <li>Business Cards</li>
-     <li>Letterheads</li>
-     <li>Brochures</li>
-   </ul>
-  </td>
-</tr>
-<tr>
-  <td>$70
-  </td>
-  <td>
-    $150
-  </td>
-  <td>
-    $300
-  </td>
-</tr>
-<tr>
-  <td></td>
-  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
-  <td></td>
-</tr>
-</table>
-</body>
-
-<style>
+   <style>
     table {
       border: 2px solid #000;
       position: fixed;
@@ -183,4 +106,82 @@ contains logo designs and poster designs.
   text-decoration: none;
 }
   </style>
+   </head>
+   <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
+<h2>A girl who simply enjoys the creative things in life.</h2>
+<h1>Pricing</h1><nav>
+<a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
+ </nav>
+ <strong>
+  <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
+  </strong>
+</header>
+  
+<div class="container">
+ <table>
+  <tr>
+    <th><i class="fa fa-check-circle-o"></i></th>
+    <th><i class="fa fa-check"></i></th>
+    <th><i class="fa fa-check-circle"></i></th>
+  </tr>
+  <tr>
+  <th>Graphic Design Package</th>
+  <th>Web Design Package</th>
+  <th>Print Package</th>
+</tr>
+<tr>
+  <td>This is the Graphic Design package;
+contains logo designs and poster designs.
+  </td>
+  <td>This is the Web Design package;
+  contains 1 website with unlimited pages and HTML/CSS coding tutorials.
+ </td>
+ <td>This is the Print package;
+ contains business cards, letterheads, and brochure designs .
+ </td>
+</tr>
+<tr>
+  <td>
+   <ul>
+  <li>A custom logo Design</li>
+   <li>Posters</li>
+   <li>Photoshop/Illustrator Tutorials</li>
+   <li>Fonts</li>
+   </ul> 
+  </td>
+  <td>
+     <ul>
+     <li>A .com domain</li>
+     <li>2 custom logo Designs</li>
+     <li>HTML/CSS Website Code</li>
+   </ul>
+  </td>
+  <td>
+       <ul>
+     <li>3-D printing</li>
+     <li>Business Cards</li>
+     <li>Letterheads</li>
+     <li>Brochures</li>
+   </ul>
+  </td>
+</tr>
+<tr>
+  <td>$70
+  </td>
+  <td>
+    $150
+  </td>
+  <td>
+    $300
+  </td>
+</tr>
+<tr>
+  <td></td>
+  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td></td>
+</tr>
+</table>
+</div>
+
+
 </html>
