--- a/gallery.html
+++ b/gallery.html
@@ -22,10 +22,9 @@
 <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
  </nav>
  <strong>
-  <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
+  <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
    </strong>
 </header>
-<body>
   <div id="lightgallery">
   <a href="http://i.imgur.com/JToaZUq.gif">
    <img src="http://i.imgur.com/JToaZUq.gif" alt= "textile" title="Diamond Pattern">
@@ -38,6 +37,5 @@
   </a>
   ...
 </div>
-</body>
- <footer>Created by Mikeala FRancis &copy;2015</footer>
+<footer>Created by Mikeala FRancis &copy;2015</footer>
 </html>
