--- a/resume.html
+++ b/resume.html
@@ -8,20 +8,7 @@
      <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
-  </head>
-  <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
-  <h2>A girl who simply enjoys the creative things in life.</h2>
-  <h1>My Resume</h1><nav>
-    <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
-     </nav>
-     <strong>
-        <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
-       </strong>
-</header>
-<body>
-<iframe src="https://drive.google.com/file/d/0BxxCt370u7tJTDY3ZGpCMzU1MUE/preview" width="240" height="480"></iframe>
-</body>
-<style>
+  <style>
   iframe {
     width: 70%;
     height: 600px;
@@ -30,5 +17,18 @@
     top: 215px;
   }
 </style>
+  </head>
+  <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
+  <h2>A girl who simply enjoys the creative things in life.</h2>
+  <h1>My Resume</h1><nav>
+    <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
+     </nav>
+     <strong>
+        <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
+       </strong>
+</header>
+<div class="container">
+<iframe src="https://drive.google.com/file/d/0BxxCt370u7tJTDY3ZGpCMzU1MUE/preview" width="240" height="480"></iframe>
+</div>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
