--- a/social-media.html
+++ b/social-media.html
@@ -15,6 +15,20 @@
         $("#lightgallery").lightGallery(); 
     });
 </script>
+<style>
+  iframe {
+    position: fixed;
+    top: 256px;
+    left: 921px;
+  }
+  
+  .twitter-timeline {
+  position: fixed;
+  top: 258px;
+  left: 450px;
+  margin: 0 auto;
+}
+</style>
 
   </head>
   <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
@@ -27,25 +41,15 @@
        </strong>
 </header>
 
-<body>
+<div class="container">
  <iframe src="http://snapwidget.com/bd/?u=ZnJhbmNpc21pa2VhbGF8aW58MjAwfDN8M3x8bm98MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=160915" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:660px; height:1035px"></iframe>
+ </div>
  
+ <div id="twitter-timeline">
   <a class="twitter-timeline" href="https://twitter.com/francis_mikeala" data-widget-id="645944023019089920">Tweets by @francis_mikeala</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</body>
+</div>
+</div>
 
-<style>
-  iframe {
-    position: fixed;
-    top: 256px;
-    left: 921px;
-  }
-  
-  #twitter-timeline {
-  position: fixed;
-  top: 258px;
-  left: 450px;
-  margin: 0 auto;
-}
-</style>
+
 </html>
