--- a/social-media.html
+++ b/social-media.html
@@ -42,7 +42,7 @@
 </header>
 
 <div class="container">
- <iframe src="http://snapwidget.com/bd/?u=ZnJhbmNpc21pa2VhbGF8aW58MjAwfDN8M3x8bm98MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=160915" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:660px; height:1035px"></iframe>
+ <iframe src="http://snapwidget.com/bd/?u=ZnJhbmNpc21pa2VhbGF8aW58MjAwfDN8M3x8bm98MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=160915" title="Instagram Widget" class="snapwidget-widget"></iframe>
  </div>
  
  <div class="twitter-timeline">
