--- a/social-media.html
+++ b/social-media.html
@@ -42,7 +42,7 @@
 </header>
 
 <div class="container">
- <iframe src="http://snapwidget.com/bd/?u=ZnJhbmNpc21pa2VhbGF8aW58MjAwfDN8M3x8bm98MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=160915" title="Instagram Widget" class="snapwidget-widget"></iframe>
+ <iframe src="http://snapwidget.com/bd/?u=ZnJhbmNpc21pa2VhbGF8aW58MjAwfDN8M3x8bm98MjB8bm9uZXxvblN0YXJ0fHllc3xubw==ve=160915" title="Instagram Widget" class="snapwidget-widget"></iframe>
  </div>
  
  <div class="twitter-timeline">
