--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
        </strong>
 </header>
-<body>
+<div class="container">
   <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
   <section id="work">
     <h3>See my Work</h3>
@@ -42,5 +42,5 @@
   </section>
 <iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" allowfullscreen></iframe>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
-</body>
+</div>
 </html>
