--- a/about.html
+++ b/about.html
@@ -25,10 +25,12 @@
    <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
   </strong>
 </header>
-<body>
+<div class="container">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
- <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
+<div class="thumbnail">
+ <img src="http://i.imgur.com/3IBDGp4.gif">
 <footer>Created by Mikeala Francis &copy; 2015</footer>
-</body>
+</div>
+</div>
 </html>
