--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
  <style>
-   img {
+   #img {
   positon: fixed;
   top: 256px;
   left: 921px;
