--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
    <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
+  <style>
+    iframe {
+      position: fixed;
+      top: 256px;
+    }
+  </style>
 </head>
 <header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
 <h2>A girl who simply enjoys the creative things in life</h2>
