--- a/final.html
+++ b/final.html
@@ -48,7 +48,7 @@
     <div class="thumbnail">
       <img src="http://goo.gl/Av1pac">
       <img src="http://goo.gl/vw43v1">
-      <img src="http://cache-graphicslib.viator.com/graphicslib/thumbs674x446/2872/SITours/venice-day-trip-from-milan-in-milan-115137.jpg">
+      <img src="http://cache-graphicslib.viator.com/graphicslib/thumbs674x446/2872/SITours/venice-day-trip-from-milan-in-milan-115137.jpg" width="360" height="165">
     </div>
   </div>
  <div class="col-md-4">
