--- a/final.html
+++ b/final.html
@@ -116,7 +116,43 @@
    </div>
   </div>
  </div>
- 
+</div>
+<div class="col-md-4">
+ <h3>Header 4</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+   Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
+   felis at, euismod nibh. Fusce ullamcorper, enim et <br>
+   congue dapibus, turpis lectus pulvinar risus, at porttitor <br>
+   ex turpis at dui. Mauris nunc ligula, luctus vel metus <br>
+   egestas, rutrum semper arcu. In sed nisi ornare, <br>
+   vulputate enim quis, ornare sem. Vivamus non vehicula <br>
+   dui. Interdum et malesuada fames ac ante ipsum primis <br>
+   in faucibus. Proin molestie mollis tortor sed rutrum. <br>
+   Vivamus a nulla placerat, luctus ligula at, ornare lorem. <br>
+   Mauris molestie nisl non porttitor viverra. Nunc <br>
+   scelerisque odio non sollicitudin auctor. Fusce sodales et <br>
+   enim eu euismod. Donec id eros urna.</p>
+   <p><a href="#">Learn More 4</a></p>
+</div>
+<div class="col-md-4">
+ <h3>Header 5</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+   Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
+   felis at, euismod nibh. Fusce ullamcorper, enim et <br>
+   congue dapibus, turpis lectus pulvinar risus, at porttitor <br>
+   ex turpis at dui. Mauris nunc ligula, luctus vel metus <br>
+   egestas, rutrum semper arcu. In sed nisi ornare, <br>
+   vulputate enim quis, ornare sem. Vivamus non vehicula <br>
+   dui. Interdum et malesuada fames ac ante ipsum primis <br>
+   in faucibus. Proin molestie mollis tortor sed rutrum. <br>
+   Vivamus a nulla placerat, luctus ligula at, ornare lorem. <br>
+   Mauris molestie nisl non porttitor viverra. Nunc <br>
+   scelerisque odio non sollicitudin auctor. Fusce sodales et <br>
+   enim eu euismod. Donec id eros urna.</p>
+   <p><a href="#">Learn More 5</a></p>
+   </div>
+  </div>
+ </div>
 </div>
 </body>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
