--- a/final.html
+++ b/final.html
@@ -79,6 +79,7 @@
         enim eu euismod. Donec id eros urna.</p>
         <p><a href="#">Learn More 1</a></p>
       </div>
+      <div class="row">
       <div class="col-md-4">
     <h3>Header 2</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
@@ -97,6 +98,7 @@
     <p><a href="#">Learn More 2</a></p>
     </div>
    </div>
+   <div class="row">
     <div class="col-md-4">
    <h3>Header 3</h3>	
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
@@ -117,7 +119,8 @@
   </div>
  </div>
 </div>
-<div class="col-md-4">
+  <div class="row">
+    <div class="col-md-4">
  <h3>Header 4</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
    Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
@@ -134,9 +137,10 @@
    enim eu euismod. Donec id eros urna.</p>
    <p><a href="#">Learn More 4</a></p>
 </div>
-<div class="col-md-4">
- <h3>Header 5</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Header 5</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
    Proin a fermentum erat. Duis in est rutrum, ullamcorper <br>
    felis at, euismod nibh. Fusce ullamcorper, enim et <br>
    congue dapibus, turpis lectus pulvinar risus, at porttitor <br>
