--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
 <div class="container">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
+<div class="container">
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
