--- a/social-media.html
+++ b/social-media.html
@@ -22,11 +22,10 @@
     left: 921px;
   }
   
-  #twitter-timeline {
+  #widget {
   position: fixed;
   top: 258px;
   left: 450px;
-  margin: 0 auto;
 }
 </style>
 
