--- a/social-media.html
+++ b/social-media.html
@@ -27,6 +27,14 @@
   top: 258px;
   left: 450px;
 }
+
+a.twitter-timeline {
+  display: inline-block;
+  padding: 6px 12px 6px 30px;
+  margin: 10px 0;
+  border: #ccc solid 1px;
+  border-radius: 3px;
+}
 </style>
 
   </head>
