--- a/about.html
+++ b/about.html
@@ -30,13 +30,10 @@
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
 </div>
-<div class="container">
-<div class="row">
-  <div class="col-md-4">
-    <div class="thumbnail">
-     <img src="http://i.imgur.com/3IBDGp4.gif">
-    </div>
-  </div>
-</div>
+
+<section>
+ <img src="http://i.imgur.com/3IBDGp4.gif">
+</section>  
+
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
