--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
  <style>
-   #img {
-  positon: fixed;
+   section {
+  position: fixed;
   top: 256px;
   left: 921px;
   margin: 0 auto;
