--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
        </strong>
 </header>
 <div class="container">
-  <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
+  <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br></p>
   <section id="work">
-    <h3>See my Work</h3>
     <a href="gallery.html">See my Work</a>
   </section>
+<iframe width="200" height="400" src="https://www.youtube.com/embed/r10cufRqeDU" allowfullscreen></iframe>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </div>
 </html>
