--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
     });
 </script>
 </head>
-<header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
+<header><img src="http://i.imgur.com/oxe5AAK.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <h1>Gallery</h1><nav>
 <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-usd"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>|<a href="social-media.html"><i class="fa fa-share-square-o"></i></a>
