--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   </strong>
  </header>
 <div class="container">
-<p> For more information, email me at mikealafrancis@gmail.com</p>
+<p> For more information, email me at mikeala_francis@yahoo.com</p>
 </div>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </body>
