--- a/about.html
+++ b/about.html
@@ -22,9 +22,7 @@
   <h1>About Me</h1><nav>
   <a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a>|<a href="gallery.html">Gallery</a>
   </nav>
-  <strong>
-   <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
-  </strong>
+
 </header>
 <div class="container">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
@@ -35,5 +33,5 @@ In my spare time, I usually like to read, draw, and write. My motto is: Be weird
  
 </section>  
 
-<footer>Created by Mikeala Francis &copy; 2015</footer>
+<footer><a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
 </html>
