--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,12 @@
  <a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a>|<a href="gallery.html">Gallery</a>
  </nav>
  <strong>
-   <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
+   
   </strong>
  </header>
 <div class="container">
 <p> For more information, email me at mikeala_francis@yahoo.com</p>
 </div>
-<footer>Created by Mikeala Francis &copy; 2015</footer>
+<footer><a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
 </body>
 </html>
