--- a/gallery.html
+++ b/gallery.html
@@ -21,9 +21,7 @@
 <h1>Gallery</h1><nav>
 <a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a>|<a href="gallery.html">Gallery</a>
  </nav>
- <strong>
-  <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
-   </strong>
+
 </header>
   <div id="lightgallery">
   <a href="http://i.imgur.com/8xorC2w.gif">
@@ -34,5 +32,5 @@
   </a>
   ...
 </div>
-<footer>Created by Mikeala FRancis &copy;2015</footer>
+<footer> <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
 </html>
