--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
   <header><img width="150" src="http://i.imgur.com/oxe5AAK.gif"  alt="my logo" title="Mikeala Francis Logo">
   <h2>A girl who simply enjoys the creative things in life.</h2>
   <h1>Mikeala Francis</h1>
+  <body>
+  <div class="nav">
+    <div class="container">
+    <ul class="pull-right">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">About</a></li> 
+      <li><a href="#">Contact</a></li> 
+      <li><a href="#">Prices</a></li> 
+      <li><a href="#">Gallery</a></li> 
+    </ul>
+  </div>
+</nav>
+...
   <nav>
      <a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a>|<a href="gallery.html">Gallery</a>
      </nav>  
