--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="container">
     <ul class="pull-right">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">About</a></li> 
-      <li><a href="#">Contact</a></li> 
-      <li><a href="#">Prices</a></li> 
-      <li><a href="#">Gallery</a></li> 
+      <li><a href="about.html">About</a></li> 
+      <li><a href="contact.html">Contact</a></li> 
+      <li><a href="prices.html">Prices</a></li> 
+      <li><a href="gallery.html">Gallery</a></li> 
     </ul>
   </div>
 </nav>
