--- a/about.html
+++ b/about.html
@@ -19,10 +19,20 @@
 <header>
   <img src="http://i.imgur.com/oxe5AAK.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
   <h2>A girl who simply enjoys the creative things in life.</h2>
-  <h1>About Me</h1><nav>
-  <a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a>|<a href="gallery.html">Gallery</a>
-  </nav>
-
+  <h1>About Me</h1>
+   <div class="nav">
+    <div class="container">
+    <ul class="pull-right">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li> 
+      <li><a href="contact.html">Contact</a></li> 
+      <li><a href="prices.html">Prices</a></li> 
+      <li><a href="gallery.html">Gallery</a></li> 
+    </ul>
+  </div>
+</nav>
+...
+  
 </header>
 <div class="container">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
