--- a/pricing.html
+++ b/pricing.html
@@ -109,12 +109,20 @@
    </head>
    <header><img src="http://i.imgur.com/oxe5AAK.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
-<h1>Pricing</h1><nav>
-<a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a></a>|<a href="gallery.html">Gallery</a>
- </nav>
- <strong>
-  <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
-  </strong>
+<h1>Pricing</h1>
+ <div class="nav">
+    <div class="container">
+    <ul class="pull-right">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li> 
+      <li><a href="contact.html">Contact</a></li> 
+      <li><a href="pricing.html">Prices</a></li> 
+      <li><a href="gallery.html">Gallery</a></li> 
+    </ul>
+  </div>
+</nav>
+...
+
 </header>
   
 <div class="container">
@@ -183,5 +191,5 @@ contains logo designs and poster designs.
 </table>
 </div>
 
-
+<footer><a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
 </html>
