--- a/gallery.html
+++ b/gallery.html
@@ -34,9 +34,11 @@
 </header>
 
   <div id="lightgallery">
-  <a href="http://i.imgur.com/8xorC2w.gif">
-   <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers">
-  </a>
+   <ul id="lightgallery" class="list-unstyled row">
+    <li><a href="http://i.imgur.com/8xorC2w.gif">
+  <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers"> </a></li>
+   </ul>
+  
   <a href="http://i.imgur.com/GaIFM8c.gif">
    <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show">
   </a>
