--- a/pricing.html
+++ b/pricing.html
@@ -126,68 +126,12 @@
 </header>
   
 <div class="container">
- <table>
+<table>
   <tr>
-    <th><i class="fa fa-check-circle-o"></i></th>
-    <th><i class="fa fa-check"></i></th>
-    <th><i class="fa fa-check-circle"></i></th>
+    <td>Graphic Design</td>
+    <td>Web Design</td>
+    <td>Print Design</td>
   </tr>
-  <tr>
-  <th>Graphic Design Package</th>
-  <th>Web Design Package</th>
-  <th>Print Package</th>
-</tr>
-<tr>
-  <td>This is the Graphic Design package;
-contains logo designs and poster designs.
-  </td>
-  <td>This is the Web Design package;
-  contains 1 website with unlimited pages and HTML/CSS coding tutorials.
- </td>
- <td>This is the Print package;
- contains business cards, letterheads, and brochure designs .
- </td>
-</tr>
-<tr>
-  <td>
-   <ul>
-  <li>A custom logo Design</li>
-   <li>Posters</li>
-   <li>Photoshop/Illustrator Tutorials</li>
-   <li>Fonts</li>
-   </ul> 
-  </td>
-  <td>
-     <ul>
-     <li>A .com domain</li>
-     <li>2 custom logo Designs</li>
-     <li>HTML/CSS Website Code</li>
-   </ul>
-  </td>
-  <td>
-       <ul>
-     <li>3-D printing</li>
-     <li>Business Cards</li>
-     <li>Letterheads</li>
-     <li>Brochures</li>
-   </ul>
-  </td>
-</tr>
-<tr>
-  <td>$70
-  </td>
-  <td>
-    $150
-  </td>
-  <td>
-    $300
-  </td>
-</tr>
-<tr>
-  <td></td>
-  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
-  <td></td>
-</tr>
 </table>
 </div>
 
