--- a/pricing.html
+++ b/pricing.html
@@ -128,9 +128,14 @@
 <div class="container">
 <table>
   <tr>
-    <td>Graphic Design</td>
-    <td>Web Design</td>
-    <td>Print Design</td>
+    <th>Graphic Design</th>
+    <th>Web Design</th>
+    <th>Print Design</th>
+  </tr>
+  <tr>
+    <td>Posters</td>
+    <td>HTML5</td>
+    <td>Business Cards</td>
   </tr>
 </table>
 </div>
