--- a/pricing.html
+++ b/pricing.html
@@ -130,12 +130,22 @@
   <tr>
     <th>Graphic Design</th>
     <th>Web Design</th>
-    <th>Print Design</th>
+    <th>Branding</th>
   </tr>
   <tr>
-    <td>Posters</td>
+    <td>Photoshop</td>
+    <td>Websites</td>
+    <td>Logo Design</td>
+  </tr>
+  <tr>
+    <td>Illustrator</td>
     <td>HTML5</td>
-    <td>Business Cards</td>
+    <td>Photography</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>Mobile Apps</td>
+    <td>Packaging</td>
   </tr>
 </table>
 </div>
