--- a/pricing.html
+++ b/pricing.html
@@ -135,17 +135,22 @@
   <tr>
     <td>Photoshop</td>
     <td>Websites</td>
-    <td>Logo Design</td>
+    <td>Corporate Identity</td>
   </tr>
   <tr>
     <td>Illustrator</td>
-    <td>HTML5</td>
+    <td>HTML5/CSS</td>
     <td>Photography</td>
   </tr>
   <tr>
     <td></td>
-    <td>Mobile Apps</td>
+    <td>JavaScript</td>
     <td>Packaging</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>Mobile App Design</td>
+    <td>Project Management</td>
   </tr>
 </table>
 </div>
