--- a/pricing.html
+++ b/pricing.html
@@ -143,12 +143,12 @@
     <td>Photography</td>
   </tr>
   <tr>
-    <td></td>
+    <td>Posters</td>
     <td>JavaScript</td>
     <td>Packaging</td>
   </tr>
   <tr>
-    <td></td>
+    <td>3D Design</td>
     <td>Mobile App Design</td>
     <td>Project Management</td>
   </tr>
