--- a/pricing.html
+++ b/pricing.html
@@ -45,7 +45,7 @@
       font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(3) {
-      background-color: #ffe4b5;
+      background-color: #faebd7;
       color: #fff;
       font-style: bold;
       font-family: 'Montserrat', sans-serif;
@@ -60,7 +60,7 @@
     tr:nth-child(5) {
       text-align: center;
       font-family: 'Montserrat', sans-serif;
-      background-color:#ffe4b5 ;
+      background-color:#faebd7 ;
       font-size: 48px;
       height: 12px;
     }
