--- a/pricing.html
+++ b/pricing.html
@@ -23,6 +23,7 @@
     }
     th { 
       background-color: #faebd7;
+      color: #000000;
       text-transform: uppercase;
     }
     
@@ -36,17 +37,18 @@
     text-align: center;
     background-color: #faebd7;
     font-family: 'Montserrat', sans-serif;
+    color: #000000;
     }
     
     tr:nth-child(2) {
       font-size: 32px;
       background-color: #ffe4b5;
-      color: #fff;
+      color: #000000;
       font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(3) {
       background-color: #faebd7;
-      color: #fff;
+      color: #000000;
       font-style: bold;
       font-family: 'Montserrat', sans-serif;
       font-size: 24px;
