--- a/pricing.html
+++ b/pricing.html
@@ -28,14 +28,14 @@
     }
     
     tr {
-      border: 1px solid #f00;
+      border: 1px solid #fff;
       height: 12px;
     }
     
     tr:nth-child(1) {
     font-size: 48px;
     text-align: center;
-    background-color: #faebd7;
+    background-color: #ffdead;
     font-family: 'Monsterrat', sans-serif;
     color: #000000;
     }
