--- a/pricing.html
+++ b/pricing.html
@@ -85,10 +85,10 @@
     
     tr:nth-child(6),
     border-bottom {
-      border-bottom: 3pt solid #987456;
+      border-bottom: 3pt solid #000000;
     }
     td {
-      border: 1px solid #bada55;
+      border: 1px solid #000000;
     }
     ul {
       font-size: 20px;
