--- a/pricing.html
+++ b/pricing.html
@@ -83,7 +83,17 @@
       vertical-align: bottom;
     }
     
-    tr:nth-child(6),
+     tr: nth-child(7) {
+      background-color: #ffe4b5;
+      color: #000000;
+      text-align: center;
+      font-family: 'Roboto', sans-serif;
+      font-weight: medium;
+      height: 20px;
+      vertical-align: bottom;
+    }
+    
+    tr:nth-child(7),
     border-bottom {
       border-bottom: 3pt solid #000000;
     }
