--- a/pricing.html
+++ b/pricing.html
@@ -22,7 +22,7 @@
       border: 2px ridge #000000;
     }
     th { 
-      background-color: #ffe4c4;
+      background-color: #ffdab9;
       color: #000000;
       text-transform: uppercase;
     }
