--- a/wedding.html
+++ b/wedding.html
@@ -4,6 +4,8 @@
 	<title>Everlasting Love Wedding Services</title>
 	<link rel="stylesheet" type="text/css" href="wedding.css" charset="utf_8">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<script src="https://use.typekit.net/cij4wsm.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 </head>
 <body>
