--- a/wedding.html
+++ b/wedding.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<script src="https://use.typekit.net/cij4wsm.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
+        <script src="https://use.typekit.net/eha8txn.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 </head>
 <body>
