--- a/wedding.html
+++ b/wedding.html
@@ -21,6 +21,7 @@
 			<a href="rsp.html">RSVP</a>
 		</nav>
 	</header>
+	<img class="cover" src="http://wallpapercave.com/wp/TFWznbl.jpg">
 	<img src="https://static.pexels.com/photos/110204/pexels-photo-110204.jpeg" alt="wedding" style="width: 800px; height="800px;" ">
 
 	<div class="wedding">
