--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 </svg>
 				
 					</div>
-					<a class="port-btn" href="portfolio-2.html">View Portfolio</a>
+					<a class="port-btn" href="portfolio.html">View Portfolio</a>
 				</div>
 			</div>
 		</div>
